tests/neg/forwardCompat-nestedSumMirror/Test_2_c3.0.2.scala
import scala.deriving._

object Test:
  def main(args: Array[String]): Unit =
    println(summon[Mirror.Of[TreeValue]]) // error
